--- a/qa.html
+++ b/qa.html
@@ -23,7 +23,7 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Validation Results for EmptyIg</h1>
- <p>Generated Thu Jul 29 04:03:01 UTC 2021, FHIR version 4.0.1 for empty.ig#0.1.0 (canonical = <a href="http://i-tech-uw.github.io/empty-ig">http://i-tech-uw.github.io/empty-ig</a> (<a href="http://i-tech-uw.github.io/empty-ig/history.html">history</a>)). See <a href="/github/workspace/output/qa.min.html">Errors Only</a></p>
+ <p>Generated Thu Jul 29 04:09:12 UTC 2021, FHIR version 4.0.1 for empty.ig#0.1.0 (canonical = <a href="http://i-tech-uw.github.io/empty-ig">http://i-tech-uw.github.io/empty-ig</a> (<a href="http://i-tech-uw.github.io/empty-ig/history.html">history</a>)). See <a href="/github/workspace/output/qa.min.html">Errors Only</a></p>
 <table class="grid"> <tr><td colspan=2><b>Quality Checks</b></td></tr>
  <tr><td>Publisher Version:</td><td><span>IG Publisher Version: v1.1.77</span></td></tr>
  <tr><td>Publication Code:</td><td>n/a<span style="color: maroon; font-weight: bold"> </span>. PackageId = empty.ig, Canonical = http://i-tech-uw.github.io/empty-ig</td></tr>
@@ -37,7 +37,7 @@
  <tr><td>Publication Rules:</td><td>Code = n/a. n/a - not an HL7.org or FHIR.org implementation guide
  <br/><br/>The copyrightYear parameter ('2021+') in the IG resource is good</td></tr>
  <tr><td>HTA Analysis:</td><td><i>Non-HL7 Igs are exempt from terminology dependency analysis</i></td></tr>
- <tr><td>Previous Version Comparison:</td><td> Unable to compare with previous version: Unable to find version history at http://i-tech-uw.github.io/empty-ig (Problem #1 with package-list.json at http://i-tech-uw.github.io/empty-ig: http://i-tech-uw.github.io/empty-ig/package-list.json)</td></tr>
+ <tr><td>Previous Version Comparison:</td><td> Unable to compare with previous version: Unable to find version history at http://i-tech-uw.github.io/empty-ig (Problem #1 with package-list.json at http://i-tech-uw.github.io/empty-ig: com.google.gson.stream.MalformedJsonException: Use JsonReader.setLenient(true) to accept malformed JSON at line 2 column 2 path $)</td></tr>
  <tr><td>Summary:</td><td> broken links = 7, errors = 1, warn = 0, info = 0</td></tr>
 </table>
  <table class="grid">
@@ -56,25 +56,25 @@
 <h2><a href="">n/a</a></h2>
  <table class="grid">
    <tr style="background-color: #ffcccc">
-     <td><b><a href="artifacts.html#a5aaafe4-6ef7-4212-bb83-0a01fc9d772e">artifacts.html#/html/body/div/div/div/p/a at Line 184, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="artifacts.html#24336c90-40c3-4fac-8332-b75b7deb19d3">artifacts.html#/html/body/div/div/div/p/a at Line 184, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b><a href="background.html#139572fb-c403-4aaf-97d0-78ffc433ec2f">background.html#/html/body/div/div/div/p/a at Line 174, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="background.html#8d72a7dc-4931-41bd-ae5d-a52202cb79b9">background.html#/html/body/div/div/div/p/a at Line 174, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b><a href="changes.html#0e1f3e81-c9d3-4539-bfb8-0ae333625b9d">changes.html#/html/body/div/div/div/p/a at Line 182, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="changes.html#1910dfb3-5395-4571-9c45-c5811f196fd4">changes.html#/html/body/div/div/div/p/a at Line 182, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b><a href="downloads.html#b01693eb-af82-49ed-86db-f8fe4ae7555d">downloads.html#/html/body/div/div/div/p/a at Line 211, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="downloads.html#6dcff92a-9271-451f-9855-4ea636c87a65">downloads.html#/html/body/div/div/div/p/a at Line 211, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b><a href="index.html#3e6e07c4-0430-49f8-a25d-12ab6da973c4">index.html#/html/body/div/div/div/p/a at Line 209, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="index.html#a03af273-7be0-45ad-af92-1df1ab434205">index.html#/html/body/div/div/div/p/a at Line 209, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b><a href="spec.html#672468ac-2c17-4741-bd69-d7b5ff214e00">spec.html#/html/body/div/div/div/p/a at Line 189, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="spec.html#932ab44c-afcd-438d-acb8-03893723301d">spec.html#/html/body/div/div/div/p/a at Line 189, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
    <tr style="background-color: #ffcccc">
-     <td><b><a href="toc.html#54fbaac9-73ac-43b4-905d-b73986cd382f">toc.html#/html/body/div/div/div/p/a at Line 172, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
+     <td><b><a href="toc.html#2fcffd29-632f-4e2f-a341-ea5dca1d0a27">toc.html#/html/body/div/div/div/p/a at Line 172, column 28</a></b></td><td><b>error</b></td><td><b>The link 'www.github.com/i-tech-uw' for &quot;I-TECH-UW&quot; cannot be resolved</b></td>
    </tr>
 </table>
 <hr/>
