--- a/toc.html
+++ b/toc.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>EMPTY.IG\Table of Contents - FHIR v4.0.1</title>
+    <title>FACILITY.IG\Table of Contents - FHIR v4.0.1</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -66,7 +66,7 @@
 
 
         <div id="ig-status">
-          <p><span style="font-size:12pt;font-weight:bold">Empty IG</span><br/>0.1.0 - ci-build</p>
+          <p><span style="font-size:12pt;font-weight:bold">Facility IG</span><br/>0.1.0 - ci-build</p>
         </div>
       </div>   <!-- /container -->
     </div>    <!-- /segment-header -->
@@ -140,7 +140,7 @@ h5:before{color:silver;counter-increment:detail;content:var(--heading-prefix) ".
 h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefix) "." counter(sub-section) "." counter(composite) "." counter(detail) "." counter(more-detail)" ";}
 </style>
 <div class="col-12">
-    <!-- ReleaseHeader --><p id="publish-box">Empty IG - Local Development build (v0.1.0). See the <a href="http://i-tech-uw.github.io/empty-ig/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
+    <!-- ReleaseHeader --><p id="publish-box">Facility IG - Local Development build (v0.1.0). See the <a href="http://i-tech-uw.github.io/facility-ig/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
   <h2>Table of Contents</h2>
   
     <!-- ?xml version="1.0" encoding="UTF-8"? --><div style="col-12"><table border="0" cellpadding="0" cellspacing="0" style="border:0px;font-size:11px;font-family:verdana;vertical-align:top;"><tbody><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="toc.html" title="Table of Contents">0 Table of Contents</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="index.html" title="Home">1 Home</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="background.html" title="Background">2 Background</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="changes.html" title="Changes">3 Changes</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="downloads.html" title="Downloads">4 Downloads</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="spec.html" title="Spec">5 Spec</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:white;"><td style="vertical-align:top;text-align:left;background-color:white;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin_end.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:white;background-color:inherit" class="hierarchy"/><a href="artifacts.html" title="Artifacts Summary">6 Artifacts Summary</a></td></tr></tbody></table></div>
@@ -166,14 +166,14 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
            
       <div class="inner-wrapper">
-        <p><a name="2fcffd29-632f-4e2f-a341-ea5dca1d0a27">​</a>
-          IG &copy; 2021+ <a style="color: #81BEF7" href="www.github.com/i-tech-uw">I-TECH-UW</a>.  Package empty.ig#0.1.0 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 29, 2021 04:09+0000">2021-07-29</span>
+        <p><a name="1fd7317d-562a-4acb-904d-89fe92d16f3d">​</a>
+          IG &copy; 2021+ <a style="color: #81BEF7" href="www.github.com/i-tech-uw">I-TECH-UW</a>.  Package facility.ig#0.1.0 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Jul 29, 2021 04:29+0000">2021-07-29</span>
           <br/>
           <span style="color: #FFFF77">
                       Links: <a style="color: #81BEF7" href="toc.html">Table of Contents</a> |
                  <a style="color: #81BEF7" href="qa.html">QA Report</a> |
                  
-                 <a style="color: #81BEF7" href="http://i-tech-uw.github.io/empty-ig/history.html" target="_blank">Version History</a> |
+                 <a style="color: #81BEF7" href="http://i-tech-uw.github.io/facility-ig/history.html" target="_blank">Version History</a> |
                  <a rel="license" style="color: #81BEF7" href="http://hl7.org/fhir/R4/license.html"><img src="assets/images/cc-by.png" alt="CC-BY" style="border-style: none;" height="17"/></a> |
                    <!-- <a style="color: #81BEF7" href="todo.html">Search</a> | --> 
 
